@@ -58,6 +58,7 @@ environment.</p>
   <b>pragma</b> debug( `commands` )
   <b>pragma</b> depreciated/deprecated( "newscript" )
   <b>pragma</b> dispute( from, message )
+  <b>pragma</b> error( "message" )
   <b>pragma</b> export( shell | local_memcache | memcache | session , var )
   <b>pragma</b> export_json( shell | local_memcache | memcache | session , var )
   <b>pragma</b> gcc_errors
@@ -540,6 +541,8 @@ is used.&nbsp; Make sure the final command ends with a
 semi-colon.&nbsp; Changing your prompt will also change the title of
 your terminal window.<br>
   </li>
+  <li> <b>pragma error( static-expression )</b> - always raise an error
+with the static expression in the message.</li>
 </ul>
 
 <h3>Shell Variables</h3>
