@@ -108,6 +108,7 @@ done        : boolean := false;           -- true if exiting script
 error_found : boolean := false;           -- true if an error occurred
 done_sub    : boolean := false;           -- true if done a subprogram
 exit_block  : boolean := false;           -- true if "exit"ing
+skipping_block : boolean := false;        -- true if skipping conditional code
 last_status : aStatusCode := 0;           -- status of last shell command
 tabSize     : natural := 8;               -- how many spaces for a tab
 
